--- a/html/ml.html
+++ b/html/ml.html
@@ -177,7 +177,8 @@
 				<li>Self-improvement</li>
 			</ol><br>
 			<p>It led to the idea that intelligent computers can be created. A new era began, full of hope -
-				<b>Artificial intelligence.</b></p>
+				<b>Artificial intelligence.</b>
+			</p>
 		</section>
 		<section>
 			<h2>Type of Artificial Intelligence</h2><br>
