--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>TechnoCode</title>
 	<link rel="stylesheet" type="text/css" href="css/home1.css">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="js/jscript.js"></script>
 </head>
+
 <body>
 	<header>
 		<img src="images/logo7.PNG" width="5%">
@@ -16,8 +19,10 @@
 	</header>
 	<div class="menu-bar">
 		<ul>
-			<li class="active"><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-			<li><a href="./html/programming.html"><i class="fa fa-laptop" aria-hidden="true"></i>Programming</a></li>
+			<li class="active"><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+			</li>
+			<li><a href="./html/programming.html"><i class="fa fa-laptop"
+						aria-hidden="true"></i>Programming</a></li>
 			<li><a href=""><i class="fa fa-certificate" aria-hidden="true"></i>Courses</a>
 				<div class="sub-menu-1">
 					<ul>
@@ -51,7 +56,8 @@
 		</section>
 		<section class="a2">
 			<h2>Free Online Training Courses</h2><br>
-			<h3>Choose The Best Education For Yourself<br><br>Technology is bringing a massive wave<br> of evolution on learning things in <br>different ways</h3>
+			<h3>Choose The Best Education For Yourself<br><br>Technology is bringing a massive wave<br> of
+				evolution on learning things in <br>different ways</h3>
 		</section>
 		<section class="a3">
 			<button><b><a href="programming.html">Enter Website</a></b></button>
@@ -64,20 +70,28 @@
 	<div>
 		<footer><br>
 			<h2><b>Like what you see?</b></h2>
-			<h3>Then give us a call and we'll chat through what you need. We've got tea, coffee and biscuits!<br>(if you're quick!)</h3>
+			<h3>Then give us a call and we'll chat through what you need. We've got tea, coffee and
+				biscuits!<br>(if you're quick!)</h3>
 			<main class="x">
 				<h3>Bikramdeep Singh - 1902033</h3>
-				<a href="mailto:bikram.singh294@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-				<a href="https://www.instagram.com/bikram.singh294/?hl=en"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-				<a href="https://www.linkedin.com/in/bikramdeep-singh-6b4144195/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+				<a href="mailto:bikram.singh294@gmail.com"><i class="fa fa-envelope fa-2x"
+						aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/bikram.singh294/?hl=en"><i
+						class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+				<a href="https://www.linkedin.com/in/bikramdeep-singh-6b4144195/"><i
+						class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
 			</main>
 			<main class="y">
 				<h3>Abhinandan jain - 1901977</h3>
-				<a href="mailto:abhinandanbansal123@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-				<a href="https://www.instagram.com/abhiiiijain/?hl=en"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-				<a href="https://www.linkedin.com/in/abhinandan-jain-0543b4195/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+				<a href="mailto:abhinandanbansal123@gmail.com"><i class="fa fa-envelope fa-2x"
+						aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/abhiiiijain/?hl=en"><i class="fa fa-instagram fa-2x"
+						aria-hidden="true"></i></a>
+				<a href="https://www.linkedin.com/in/abhinandan-jain-0543b4195/"><i
+						class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
 			</main>
 		</footer>
 	</div>
 </body>
+
 </html>
